fixed nav box shadow not showing

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body {
   text-align: center;
   display: flex;
   flex-direction: column;
+  gap: 3em;
 }
 /* ======================= typography ======================= */
 .nav-title {
